deploy/k8s/llm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm
spec:
  selector:
    app.kubernetes.io/name: llm
  ports:
    - name: http
      port: 11434
      targetPort: http
